[project]
name = "enterprise_flow_repro"
version = "0.1.0"
description = "enterprise_flow_repro using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
]

[project.scripts]
kickoff = "enterprise_flow_repro.main:kickoff"
run_crew = "enterprise_flow_repro.main:kickoff"
plot = "enterprise_flow_repro.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
